Added first page content html

--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
             <li><a href="#">Sign up!</a></li>
         </ul>
     </div>
+    <div class="middle">
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Welcome to Champions of F1!</h1>
+                <p>This site is dedicated to displaying most frequent F1 Championship winners of the past.<br><br>
+                Who's your favourite champion?</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
