Added driver info

--- a/index.html
+++ b/index.html
@@ -24,6 +24,80 @@
                 Who's your favourite champion?</p>
             </div>
         </div>
+        <div class="drivers">
+            <h1>Most F1 Championship winners</h1>
+            <div class="cards">
+                <div class="container">
+                    <img src="imgs/michael.jpg" alt="Michael Schumacher" class="image">
+                    <div class="overlay">
+                        <div class="text">
+                        <ul>
+                            <li>Name: Michael Schumacher</li>
+                            <li>Championships: 7 (1994, 1995, 2000, 2001, 2002, 2003, 2004)</li>
+                            <li>Wins: 91</li>
+                            <li>Status: Retired</li>
+                        </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="imgs/lewis.jpg" alt="Lewis Hamilton" class="image">
+                    <div class="overlay">
+                        <div class="text">
+                            <ul>
+                                <li>Name: Lewis Hamilton</li>
+                                <li>Championships: 7 (2008, 2014, 2015, 2017, 2018, 2019, 2020)</li>
+                                <li>Wins: 103</li>
+                                <li>Status: Currently racing</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="imgs/fangio.jpg" alt="Juan Manuel Fangio" class="image"> 
+                    <div class="overlay">
+                        <div class="text">
+                            <ul>
+                                <li>Name:Juan Manuel Fangio</li>
+                                <li>Championships: 5 (1951, 1954, 1955, 1956, 1957)</li>
+                                <li>Wins: 24</li>
+                                <li>Status: Retired</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="imgs/ProstPodium.webp" alt="Alain Prost" class="image">
+                    <div class="overlay">
+                        <div class="text">
+                            <ul>
+                                <li>Name: Alain Prost</li>
+                                <li>Championships: 4 (1985, 1986, 1989, 1993)</li>
+                                <li>Wins: 51</li>
+                                <li>Status: Retired</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="imgs/vettel.jpg" alt="Sebastian Vettel" class="image">
+                    <div class="overlay">
+                        <div class="text">
+                            <ul>
+                                <li>Name: Sebastian Vettel</li>
+                                <li>Championships: 4 (2010, 2011, 2012, 2013)</li>
+                                <li>Wins: 53</li>
+                                <li>Status: Retired</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
