Added quote, sign up template, footer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 Who's your favourite champion?</p>
             </div>
         </div>
+
         <div class="drivers">
             <h1>Most F1 Championship winners</h1>
             <div class="cards">
@@ -98,6 +99,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="quote">
+            "If you no longer go for a gap that exists,<br>
+            you are no longer a racing driver"<br>
+            -Ayrton Senna
+        </div>
+        <div class="newsletter"></div>
+    </div>
+
+    <div class="footer">
+        The Odin Project ❤️
     </div>
 </body>
 </html>
