Modified driver imgs and corrected text alignment

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Champions of F1<span class="emoji">🏎️<br>.</span></div>
+        <div class="logo">Champions of F1<span class="emoji">🏎️</span></div>
         <ul class="links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -61,7 +61,7 @@
                     <div class="overlay">
                         <div class="text">
                             <ul>
-                                <li>Name:Juan Manuel Fangio</li>
+                                <li>Name: Juan Manuel Fangio</li>
                                 <li>Championships: 5 (1951, 1954, 1955, 1956, 1957)</li>
                                 <li>Wins: 24</li>
                                 <li>Status: Retired</li>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="container">
-                    <img src="imgs/ProstPodium.webp" alt="Alain Prost" class="image">
+                    <img src="imgs/ALAIN-PROST.jpg" alt="Alain Prost" class="image">
                     <div class="overlay">
                         <div class="text">
                             <ul>
