Fixed headings, added quote page

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="hero-image">
             <div class="hero-text">
                 <h1>Welcome to Champions of F1!</h1>
-                <p>This site is dedicated to displaying most frequent F1 Championship winners of the past.<br><br>
+                <p>This site is dedicated to display F1 Championship winners of the past.<br><br>
                 Who's your favourite champion?</p>
             </div>
         </div>
 
         <div class="drivers">
-            <h1>Most F1 Championship winners</h1>
+            <h1>F1 Championship winners</h1>
             <div class="cards">
                 <div class="container">
                     <img src="imgs/michael.jpg" alt="Michael Schumacher" class="image">
@@ -100,16 +100,18 @@
             </div>
         </div>
 
-        <div class="quote">
-            "If you no longer go for a gap that exists,<br>
-            you are no longer a racing driver"<br>
-            -Ayrton Senna
+        <div class="quote-page">
+            <div class="quote">
+                "If you no longer go for a gap that exists,<br>
+                you are no longer a racing driver"
+            </div>
+            <div class="name">-Ayrton Senna</div>
         </div>
         <div class="newsletter"></div>
     </div>
 
     <div class="footer">
-        The Odin Project ❤️
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
