--- a/index.html
+++ b/index.html
@@ -107,7 +107,18 @@
             </div>
             <div class="name">-Ayrton Senna</div>
         </div>
-        <div class="newsletter"></div>
+
+        <div class="newsletter">
+            <div class="box">
+                <div class="left">
+                    <div class="message-title">Sign up now!</div>
+                    <div class="message-text">Sign up to be updated with the latest F1 content.</div>
+                </div>
+                <div class="right">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
