Added alignment to driver cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="drivers">
-            <h1>F1 Championship winners</h1>
+            <h1>F1 Championship winners🏆</h1>
             <div class="cards">
                 <div class="container">
                     <img src="imgs/michael.jpg" alt="Michael Schumacher" class="image">
