--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Champions of F1<span class="emoji">🏎️</span></div>
+        <div class="logo">Champions of F1🏎️</div>
         <ul class="links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
