Add favicon, header icon

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1-Landing-Page</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./imgs/f1.png">
 </head>
 <body>
     <div class="header">
-        <div class="logo">Champions of F1🏎️</div>
+        <div class="left-header">
+            <div class="logo">Champions of F1</div>
+            <img class="logo-car" src="./imgs/Gerald_G_Formula_One_Car.svg">
+        </div>
         <ul class="links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -122,7 +126,7 @@
     </div>
 
     <div class="footer">
-        Copyright © The Odin Project 2021
+        Copyright © The Odin Project 2023
     </div>
 </body>
 </html>
