--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img src="imgs/michael.jpg" alt="Michael Schumacher" class="image">
                     <div class="overlay">
                         <div class="text">
-                        <ul>
+                        <ul class="info">
                             <li>Name: Michael Schumacher</li>
                             <li>Championships: 7 (1994, 1995, 2000, 2001, 2002, 2003, 2004)</li>
                             <li>Wins: 91</li>
@@ -50,7 +50,7 @@
                     <img src="imgs/lewis.jpg" alt="Lewis Hamilton" class="image">
                     <div class="overlay">
                         <div class="text">
-                            <ul>
+                            <ul class="info">
                                 <li>Name: Lewis Hamilton</li>
                                 <li>Championships: 7 (2008, 2014, 2015, 2017, 2018, 2019, 2020)</li>
                                 <li>Wins: 103</li>
@@ -64,7 +64,7 @@
                     <img src="imgs/fangio.jpg" alt="Juan Manuel Fangio" class="image"> 
                     <div class="overlay">
                         <div class="text">
-                            <ul>
+                            <ul class="info">
                                 <li>Name: Juan Manuel Fangio</li>
                                 <li>Championships: 5 (1951, 1954, 1955, 1956, 1957)</li>
                                 <li>Wins: 24</li>
@@ -78,7 +78,7 @@
                     <img src="imgs/ALAIN-PROST.jpg" alt="Alain Prost" class="image">
                     <div class="overlay">
                         <div class="text">
-                            <ul>
+                            <ul class="info">
                                 <li>Name: Alain Prost</li>
                                 <li>Championships: 4 (1985, 1986, 1989, 1993)</li>
                                 <li>Wins: 51</li>
@@ -92,7 +92,7 @@
                     <img src="imgs/vettel.jpg" alt="Sebastian Vettel" class="image">
                     <div class="overlay">
                         <div class="text">
-                            <ul>
+                            <ul class="info">
                                 <li>Name: Sebastian Vettel</li>
                                 <li>Championships: 4 (2010, 2011, 2012, 2013)</li>
                                 <li>Wins: 53</li>
