add gap between links and driver info

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./imgs/f1.png">
 </head>
+
 <body>
     <div class="header">
         <div class="left-header">
@@ -24,8 +26,10 @@
         <div class="hero-image">
             <div class="hero-text">
                 <h1>Welcome to Champions of F1!</h1>
-                <p>This site is dedicated to display F1 Championship winners of the past.<br><br>
-                Who's your favourite champion?</p>
+                <p>
+                    This site is dedicated to display F1 Championship winners of the past.<br><br>
+                    Who's your favourite champion?
+                </p>
             </div>
         </div>
 
@@ -36,12 +40,12 @@
                     <img src="imgs/michael.jpg" alt="Michael Schumacher" class="image">
                     <div class="overlay">
                         <div class="text">
-                        <ul class="info">
-                            <li>Name: Michael Schumacher</li>
-                            <li>Championships: 7 (1994, 1995, 2000, 2001, 2002, 2003, 2004)</li>
-                            <li>Wins: 91</li>
-                            <li>Status: Retired</li>
-                        </ul>
+                            <ul class="info">
+                                <li>Name: Michael Schumacher</li>
+                                <li>Championships: 7 <br>(1994, 1995, 2000, 2001, 2002, 2003, 2004)</li>
+                                <li>Wins: 91</li>
+                                <li>Status: Retired</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -52,7 +56,7 @@
                         <div class="text">
                             <ul class="info">
                                 <li>Name: Lewis Hamilton</li>
-                                <li>Championships: 7 (2008, 2014, 2015, 2017, 2018, 2019, 2020)</li>
+                                <li>Championships: 7 <br>(2008, 2014, 2015, 2017, 2018, 2019, 2020)</li>
                                 <li>Wins: 103</li>
                                 <li>Status: Currently racing</li>
                             </ul>
@@ -61,12 +65,12 @@
                 </div>
 
                 <div class="container">
-                    <img src="imgs/fangio.jpg" alt="Juan Manuel Fangio" class="image"> 
+                    <img src="imgs/fangio.jpg" alt="Juan Manuel Fangio" class="image">
                     <div class="overlay">
                         <div class="text">
                             <ul class="info">
                                 <li>Name: Juan Manuel Fangio</li>
-                                <li>Championships: 5 (1951, 1954, 1955, 1956, 1957)</li>
+                                <li>Championships: 5 <br>(1951, 1954, 1955, 1956, 1957)</li>
                                 <li>Wins: 24</li>
                                 <li>Status: Retired</li>
                             </ul>
@@ -80,7 +84,7 @@
                         <div class="text">
                             <ul class="info">
                                 <li>Name: Alain Prost</li>
-                                <li>Championships: 4 (1985, 1986, 1989, 1993)</li>
+                                <li>Championships: 4 <br>(1985, 1986, 1989, 1993)</li>
                                 <li>Wins: 51</li>
                                 <li>Status: Retired</li>
                             </ul>
@@ -94,7 +98,7 @@
                         <div class="text">
                             <ul class="info">
                                 <li>Name: Sebastian Vettel</li>
-                                <li>Championships: 4 (2010, 2011, 2012, 2013)</li>
+                                <li>Championships: 4 <br>(2010, 2011, 2012, 2013)</li>
                                 <li>Wins: 53</li>
                                 <li>Status: Retired</li>
                             </ul>
@@ -129,4 +133,5 @@
         Copyright © The Odin Project 2023
     </div>
 </body>
+
 </html>
