form link added to sign up button

--- a/index.html
+++ b/index.html
@@ -1,137 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F1-Landing-Page</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./imgs/f1.png">
-</head>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./imgs/f1.png" />
+  </head>
 
-<body>
+  <body>
     <div class="header">
-        <div class="left-header">
-            <div class="logo">Champions of F1</div>
-            <img class="logo-car" src="./imgs/Gerald_G_Formula_One_Car.svg">
-        </div>
-        <ul class="links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Sign up!</a></li>
-        </ul>
+      <div class="left-header">
+        <div class="logo">Champions of F1</div>
+        <img class="logo-car" src="./imgs/Gerald_G_Formula_One_Car.svg" />
+      </div>
+      <ul class="links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Sign up!</a></li>
+      </ul>
     </div>
     <div class="middle">
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>Welcome to Champions of F1!</h1>
-                <p>
-                    This site is dedicated to display F1 Championship winners of the past.<br><br>
-                    Who's your favourite champion?
-                </p>
-            </div>
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1>Welcome to Champions of F1!</h1>
+          <p>
+            This site is dedicated to display F1 Championship winners of the
+            past.<br /><br />
+            Who's your favourite champion?
+          </p>
         </div>
+      </div>
 
-        <div class="drivers">
-            <h1>F1 Championship winners🏆</h1>
-            <div class="cards">
-                <div class="container">
-                    <img src="imgs/michael.jpg" alt="Michael Schumacher" class="image">
-                    <div class="overlay">
-                        <div class="text">
-                            <ul class="info">
-                                <li>Name: Michael Schumacher</li>
-                                <li>Championships: 7 <br>(1994, 1995, 2000, 2001, 2002, 2003, 2004)</li>
-                                <li>Wins: 91</li>
-                                <li>Status: Retired</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container">
-                    <img src="imgs/lewis.jpg" alt="Lewis Hamilton" class="image">
-                    <div class="overlay">
-                        <div class="text">
-                            <ul class="info">
-                                <li>Name: Lewis Hamilton</li>
-                                <li>Championships: 7 <br>(2008, 2014, 2015, 2017, 2018, 2019, 2020)</li>
-                                <li>Wins: 103</li>
-                                <li>Status: Currently racing</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container">
-                    <img src="imgs/fangio.jpg" alt="Juan Manuel Fangio" class="image">
-                    <div class="overlay">
-                        <div class="text">
-                            <ul class="info">
-                                <li>Name: Juan Manuel Fangio</li>
-                                <li>Championships: 5 <br>(1951, 1954, 1955, 1956, 1957)</li>
-                                <li>Wins: 24</li>
-                                <li>Status: Retired</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container">
-                    <img src="imgs/ALAIN-PROST.jpg" alt="Alain Prost" class="image">
-                    <div class="overlay">
-                        <div class="text">
-                            <ul class="info">
-                                <li>Name: Alain Prost</li>
-                                <li>Championships: 4 <br>(1985, 1986, 1989, 1993)</li>
-                                <li>Wins: 51</li>
-                                <li>Status: Retired</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container">
-                    <img src="imgs/vettel.jpg" alt="Sebastian Vettel" class="image">
-                    <div class="overlay">
-                        <div class="text">
-                            <ul class="info">
-                                <li>Name: Sebastian Vettel</li>
-                                <li>Championships: 4 <br>(2010, 2011, 2012, 2013)</li>
-                                <li>Wins: 53</li>
-                                <li>Status: Retired</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+      <div class="drivers">
+        <h1>F1 Championship winners🏆</h1>
+        <div class="cards">
+          <div class="container">
+            <img
+              src="imgs/michael.jpg"
+              alt="Michael Schumacher"
+              class="image"
+            />
+            <div class="overlay">
+              <div class="text">
+                <ul class="info">
+                  <li>Name: Michael Schumacher</li>
+                  <li>
+                    Championships: 7 <br />(1994, 1995, 2000, 2001, 2002, 2003,
+                    2004)
+                  </li>
+                  <li>Wins: 91</li>
+                  <li>Status: Retired</li>
+                </ul>
+              </div>
             </div>
-        </div>
+          </div>
 
-        <div class="quote-page">
-            <div class="quote">
-                "If you no longer go for a gap that exists,<br>
-                you are no longer a racing driver"
+          <div class="container">
+            <img src="imgs/lewis.jpg" alt="Lewis Hamilton" class="image" />
+            <div class="overlay">
+              <div class="text">
+                <ul class="info">
+                  <li>Name: Lewis Hamilton</li>
+                  <li>
+                    Championships: 7 <br />(2008, 2014, 2015, 2017, 2018, 2019,
+                    2020)
+                  </li>
+                  <li>Wins: 103</li>
+                  <li>Status: Currently racing</li>
+                </ul>
+              </div>
             </div>
-            <div class="name">-Ayrton Senna</div>
-        </div>
+          </div>
 
-        <div class="newsletter">
-            <div class="box">
-                <div class="left">
-                    <div class="message-title">Sign up now!</div>
-                    <div class="message-text">Sign up to be updated with the latest F1 content.</div>
-                </div>
-                <div class="right">
-                    <button>Sign up</button>
-                </div>
+          <div class="container">
+            <img src="imgs/fangio.jpg" alt="Juan Manuel Fangio" class="image" />
+            <div class="overlay">
+              <div class="text">
+                <ul class="info">
+                  <li>Name: Juan Manuel Fangio</li>
+                  <li>Championships: 5 <br />(1951, 1954, 1955, 1956, 1957)</li>
+                  <li>Wins: 24</li>
+                  <li>Status: Retired</li>
+                </ul>
+              </div>
             </div>
+          </div>
+
+          <div class="container">
+            <img src="imgs/ALAIN-PROST.jpg" alt="Alain Prost" class="image" />
+            <div class="overlay">
+              <div class="text">
+                <ul class="info">
+                  <li>Name: Alain Prost</li>
+                  <li>Championships: 4 <br />(1985, 1986, 1989, 1993)</li>
+                  <li>Wins: 51</li>
+                  <li>Status: Retired</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <img src="imgs/vettel.jpg" alt="Sebastian Vettel" class="image" />
+            <div class="overlay">
+              <div class="text">
+                <ul class="info">
+                  <li>Name: Sebastian Vettel</li>
+                  <li>Championships: 4 <br />(2010, 2011, 2012, 2013)</li>
+                  <li>Wins: 53</li>
+                  <li>Status: Retired</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="quote-page">
+        <div class="quote">
+          "If you no longer go for a gap that exists,<br />
+          you are no longer a racing driver"
+        </div>
+        <div class="name">-Ayrton Senna</div>
+      </div>
+
+      <div class="newsletter">
+        <div class="box">
+          <div class="left">
+            <div class="message-title">Sign up now!</div>
+            <div class="message-text">
+              Sign up to be updated with the latest F1 content.
+            </div>
+          </div>
+          <div class="right">
+            <a href="https://rushiljalal.github.io/signup-form/"
+              ><button>Sign up</button></a
+            >
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="footer">
-        Copyright © The Odin Project 2023
-    </div>
-</body>
-
+    <div class="footer">Copyright © The Odin Project 2023</div>
+  </body>
 </html>
